<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 字体大小子菜单（小/中/大，对应10/16/20号字） -->
    <item
        android:id="@+id/item_text_size"
        android:title="@string/menu_text_size"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/size_small" android:title="@string/size_small"/>
            <item android:id="@+id/size_medium" android:title="@string/size_medium"/>
            <item android:id="@+id/size_large" android:title="@string/size_large"/>
        </menu>
    </item>

    <!-- 普通菜单项（点击弹出Toast） -->
    <item
        android:id="@+id/item_normal"
        android:title="@string/menu_normal"
        app:showAsAction="never"/>

    <!-- 字体颜色子菜单（红色/黑色） -->
    <item
        android:id="@+id/item_text_color"
        android:title="@string/menu_text_color"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/color_red" android:title="@string/color_red"/>
            <item android:id="@+id/color_black" android:title="@string/color_black"/>
        </menu>
    </item>

</menu>